--- a/website/pages/docs/tutorial.mdx
+++ b/website/pages/docs/tutorial.mdx
@@ -9,7 +9,8 @@ This page teaches you the fundamentals of Floating UI's
 positioning (**why it even exists instead of just using CSS**) by
 building a tooltip from the ground up.
 
-<x-ad />
+If you just want to start learning about the API, skip to the
+[next section](/docs/computePosition).
 
 ## Setting up
 
