--- a/website/pages/docs/hide.mdx
+++ b/website/pages/docs/hide.mdx
@@ -9,7 +9,10 @@ clipping context as the reference element.
 
 <div className="flex flex-col gap-4">
   <Chrome center scrollable className="h-96">
-    <Floating portaled middleware={[{name: 'hide'}]}>
+    <Floating
+      portaled
+      middleware={[{name: 'offset', options: 5}, {name: 'hide'}]}
+    >
       <div className="grid place-items-center text-gray-50 w-32 h-32 bg-blue-600">
         Scroll
       </div>
