--- a/website/pages/docs/react-native.mdx
+++ b/website/pages/docs/react-native.mdx
@@ -5,8 +5,13 @@ export default Layout;
 
 **Status: Experimental**
 
-Support for React Native is new; we are still trying to iterate
-on the API to find optimal usage for users!
+Support for React Native is new, and as such the API is not final
+and might not cover various use cases. It also might be buggy so
+consider this a very early alpha.
+
+To help, please visit the
+[GitHub](https://github.com/atomiks/floating-ui/) and contribute
+to the discussions!
 
 ```shell
 npm install @floating-ui/react-native
@@ -21,8 +26,8 @@ yarn add @floating-ui/react-native
 The `useFloating()` hook accepts all of
 [computePosition's options](/docs/computePosition#options).
 
-**Important**: middleware must be either memo'd or declared
-outside of the function body to prevent an infinite render loop.
+Middleware must be either memo'd or declared outside of the
+function body to prevent an infinite render loop.
 
 ```jsx
 import {useMemo} from 'react';
