--- a/website/pages/docs/size.mdx
+++ b/website/pages/docs/size.mdx
@@ -9,7 +9,11 @@ floating element so it doesn't overflow the available space.
 <div className="flex flex-col gap-4">
   <Chrome center scrollable className="h-96">
     <Floating
-      tooltipStyle={{height: 200}}
+      tooltipStyle={{
+        height: 200,
+        overflow: 'hidden',
+        maxHeight: 0,
+      }}
       middleware={[{name: 'size', options: {padding: 5}}]}
     >
       <div className="grid place-items-center text-gray-50 w-32 h-32 bg-blue-600">
@@ -29,7 +33,10 @@ it reaches a minimum acceptable size.
     middleware={[
       {
         name: 'flip',
-        options: {rootBoundary: 'document', padding: 5},
+        options: {
+          rootBoundary: 'document',
+          fallbackStrategy: 'bestFit',
+        },
       },
       {
         name: 'size',
@@ -57,6 +64,8 @@ computePosition(referenceEl, floatingEl, {
 }).then(({middlewareData}) => {
   const {width, height} = middlewareData.size;
 
+  // If your element has a border, ensure your CSS is using
+  // `box-sizing: border-box`
   Object.assign(floatingEl.style, {
     maxWidth: `${width}px`,
     maxHeight: `${height}px`,
@@ -78,7 +87,9 @@ type Data = {
 
 ## Options
 
-`size` accepts an object of options.
+```ts
+type Options = DetectOverflowOptions;
+```
 
 ### ...detectOverflowOptions
 
