--- a/website/pages/docs/react-native.mdx
+++ b/website/pages/docs/react-native.mdx
@@ -9,7 +9,7 @@ Support for React Native is new, and as such the API is not final
 and might not cover various use cases. It also might be buggy so
 consider this a very early alpha.
 
-To help, please visit the
+Please visit the
 [GitHub](https://github.com/atomiks/floating-ui/) and contribute
 to the discussions!
 
