--- a/website/pages/docs/size.mdx
+++ b/website/pages/docs/size.mdx
@@ -14,7 +14,7 @@ floating element so it doesn't overflow the available space.
         overflow: 'hidden',
         maxHeight: 0,
       }}
-      middleware={[{name: 'size', options: {padding: 5}}]}
+      middleware={[{name: 'size'}]}
     >
       <div className="grid place-items-center text-gray-50 w-32 h-32 bg-blue-600">
         Scroll
@@ -22,33 +22,6 @@ floating element so it doesn't overflow the available space.
     </Floating>
   </Chrome>
 </div>
-
-This can be used in conjunction with `flip` to make the floating
-element prefer its initial `placement` as much as possible, until
-it reaches a minimum acceptable size.
-
-<Chrome center scrollable className="h-96">
-  <Floating
-    tooltipStyle={{height: 200}}
-    middleware={[
-      {
-        name: 'flip',
-        options: {
-          rootBoundary: 'document',
-          fallbackStrategy: 'bestFit',
-        },
-      },
-      {
-        name: 'size',
-        options: {rootBoundary: 'document', padding: 5},
-      },
-    ]}
-  >
-    <div className="grid place-items-center text-gray-50 w-32 h-32 bg-blue-600">
-      Scroll
-    </div>
-  </Floating>
-</Chrome>
 
 If your floating element's content cannot be resized such as in
 the example, you can make the floating element scrollable with
@@ -60,35 +33,43 @@ the example, you can make the floating element scrollable with
 import {computePosition, size} from '@floating-ui/dom';
 
 computePosition(referenceEl, floatingEl, {
-  middleware: [size()],
-}).then(({middlewareData}) => {
-  const {width, height} = middlewareData.size;
-
-  // If your element has a border, ensure your CSS is using
-  // `box-sizing: border-box`
-  Object.assign(floatingEl.style, {
-    maxWidth: `${width}px`,
-    maxHeight: `${height}px`,
-  });
+  middleware: [
+    size({
+      apply({width, height}) {
+        // If your element has a border, ensure your CSS is using
+        // `box-sizing: border-box`
+        Object.assign(floatingEl.style, {
+          maxWidth: `${width}px`,
+          maxHeight: `${height}px`,
+        });
+      },
+    }),
+  ],
 });
-```
-
-## Data
-
-These dimensions represent how large the floating element can be
-before it will overflow.
-
-```ts
-type Data = {
-  width: number;
-  height: number;
-};
 ```
 
 ## Options
 
 ```ts
-type Options = DetectOverflowOptions;
+type Options = DetectOverflowOptions & {
+  apply(dimensions: Dimensions): void;
+};
+```
+
+### apply
+
+Unlike other middleware, `size` is not pure due to its inherently
+mutable nature. When changing the size of the `Rect`s, the
+lifecycle must restart, but this requires the mutation to occur.
+Your size-related style mutations should occur inside this
+function.
+
+```js
+size({
+  apply({width, height}) {
+    // Style mutations here
+  },
+});
 ```
 
 ### ...detectOverflowOptions
@@ -99,3 +80,103 @@ can be passed. For instance:
 ```js
 size({padding: 5}); // 0 by default
 ```
+
+## Using with flip
+
+Using `size` together with `flip` enables some useful behavior.
+The floating element can be resized, thus allowing it to prefer
+its initial placement as much as possible, until it reaches a
+minimum size, at which point it will flip.
+
+If you're using the `padding` option in either middleware, ensure
+they share the **same value**.
+
+### bestFit
+
+The `"bestFit"` fallback strategy in the `flip` middleware is the
+default, which ensures the best fitting placement is used. In
+this scenario, place `size` **after** `flip`:
+
+```js
+const middleware = [
+  flip(),
+  size({
+    apply({width, height}) {
+      // ...
+    },
+  }),
+];
+```
+
+<div className="flex flex-col gap-4">
+  <Chrome center scrollable className="h-96">
+    <Floating
+      tooltipStyle={{
+        height: 200,
+        overflow: 'hidden',
+        maxHeight: 0,
+      }}
+      middleware={[
+        {name: 'flip', options: {padding: 5}},
+        {name: 'size', options: {padding: 5}},
+      ]}
+    >
+      <div className="grid place-items-center text-gray-50 w-32 h-32 bg-blue-600">
+        Scroll
+      </div>
+    </Floating>
+  </Chrome>
+</div>
+
+This strategy ensures the floating element stays in view at all
+times at the most optimal size.
+
+### initialPlacement
+
+If instead, you want the initial placement to take precedence,
+and are setting a minimum acceptable size, place `size`
+**before** `flip`:
+
+```js
+const middleware = [
+  size({
+    apply({width, height}) {
+      Object.assign(floatingEl.style, {
+        // Minimum acceptable height is 80px.
+        // `flip` will then take over.
+        maxHeight: `${Math.max(80, height)}px`,
+      });
+    },
+  }),
+  flip({
+    fallbackStrategy: 'initialPlacement',
+  }),
+];
+```
+
+<div className="flex flex-col gap-4">
+  <Chrome center scrollable className="h-96">
+    <Floating
+      tooltipStyle={{
+        height: 200,
+        overflow: 'hidden',
+        maxHeight: 0,
+      }}
+      middleware={[
+        {name: 'size', options: {padding: 5}},
+        {
+          name: 'flip',
+          options: {
+            fallbackStrategy: 'initialPlacement',
+            padding: 5,
+          },
+        },
+      ]}
+      minHeight={70}
+    >
+      <div className="grid place-items-center text-gray-50 w-32 h-32 bg-blue-600">
+        Scroll
+      </div>
+    </Floating>
+  </Chrome>
+</div>
