docs: various improvements

--- a/website/pages/docs/hide.mdx
+++ b/website/pages/docs/hide.mdx
@@ -14,7 +14,7 @@ clipping context as the reference element.
       middleware={[{name: 'offset', options: 5}, {name: 'hide'}]}
     >
       <div className="grid place-items-center text-gray-50 w-32 h-32 bg-blue-600">
-        Scroll
+        Scroll up
       </div>
     </Floating>
   </Chrome>
