docs: update react native docs

--- a/website/pages/docs/react-native.mdx
+++ b/website/pages/docs/react-native.mdx
@@ -49,8 +49,8 @@ function App() {
         ref={floating}
         style={{
           position: 'absolute',
-          top: `${y}px`,
-          left: `${x}px`,
+          top: y != null ? `${y}px` : '',
+          left: x != null ? `${x}px` : '',
         }}
       >
         <Text>Floating</Text>
@@ -59,6 +59,13 @@ function App() {
   );
 }
 ```
+
+`x` and `y` will be `null` initially, before the layout effect
+has fired.
+
+> You may be tempted to simplify the ternary to `y ? ... : ...`
+> without a `!= null` check, but `y` and `x` can be `0` so there
+> will be bugs if you do!
 
 ## ScrollView
 
