--- a/website/pages/docs/tutorial.mdx
+++ b/website/pages/docs/tutorial.mdx
@@ -426,8 +426,8 @@ computePosition(button, tooltip, {
   }[placement.split('-')[0]];
 
   Object.assign(arrowElement.style, {
-    left: arrowX ? `${arrowX}px` : '',
-    top: arrowY ? `${arrowY}px` : '',
+    left: arrowX != null ? `${arrowX}px` : '',
+    top: arrowY != null ? `${arrowY}px` : '',
     right: '',
     bottom: '',
     [staticSide]: '-4px',
