--- a/website/pages/docs/middleware.mdx
+++ b/website/pages/docs/middleware.mdx
@@ -91,8 +91,7 @@ computePosition(referenceEl, floatingEl, {
 ### Function
 
 You may notice that Floating UI's core middleware are actually
-functions. This is so you can pass options in to configure the
-bahvior:
+functions. This is so you can pass options in:
 
 ```js
 const shiftByAmount = (amount = 0) => ({
