docs: fix react demos

--- a/website/pages/docs/react-dom.mdx
+++ b/website/pages/docs/react-dom.mdx
@@ -124,7 +124,7 @@ function App() {
         style={{
           position: strategy,
           top: y != null ? `${y}px` : '',
-          left: x != null `${x}px` : '',
+          left: x != null ? `${x}px` : '',
         }}
       >
         Tooltip
