--- a/website/pages/docs/react-dom.mdx
+++ b/website/pages/docs/react-dom.mdx
@@ -16,13 +16,17 @@ yarn add @floating-ui/react-dom
 The `useFloating()` hook accepts all of
 [computePosition's options](/docs/computePosition#options).
 
+Middleware must be either memo'd or declared outside of the
+function body to prevent an infinite render loop.
+
 ```jsx
+import {useMemo} from 'react';
 import {useFloating, shift} from '@floating-ui/react-dom';
 
 function App() {
   const {x, y, reference, floating, strategy} = useFloating({
     placement: 'right',
-    middleware: [shift()],
+    middleware: useMemo(() => [shift()], []),
   });
 
   return (
@@ -74,7 +78,7 @@ For instance, to update on all relevant nodes, you can import the
 `getScrollParents` util from the package:
 
 ```jsx {5,9,15-37}
-import {useEffect} from 'react';
+import {useMemo, useEffect} from 'react';
 import {
   useFloating,
   shift,
@@ -85,7 +89,7 @@ function App() {
   const {x, y, reference, floating, strategy, update, refs} =
     useFloating({
       placement: 'right',
-      middleware: [shift()],
+      middleware: useMemo(() => [shift()], []),
     });
 
   // Update on scroll and resize for all relevant nodes
@@ -145,13 +149,13 @@ const {middlewareData} = useFloating();
 See [Virtual Elements](/docs/virtual-elements) for details.
 
 ```jsx
-import {useLayoutEffect} from 'react';
+import {useMemo, useLayoutEffect} from 'react';
 import {useFloating, shift} from '@floating-ui/react-dom';
 
 function App() {
   const {x, y, reference, floating, strategy} = useFloating({
     placement: 'right',
-    middleware: [shift()],
+    middleware: useMemo(() => [shift()], []),
   });
 
   useLayoutEffect(() => {
