docs: various tweaks

--- a/website/pages/docs/arrow.mdx
+++ b/website/pages/docs/arrow.mdx
@@ -61,7 +61,9 @@ arrow({
 
 ### padding
 
-Type: `number | SideObject`
+```ts
+type Padding = number | SideObject;
+```
 
 This describes the padding between the arrow and the edges of the
 floating element. If your floating element has `border-radius`,
