--- a/website/pages/docs/flip.mdx
+++ b/website/pages/docs/flip.mdx
@@ -71,10 +71,10 @@ flip({
 });
 ```
 
-If the `placement` in `computePosition()` is set to `'top'`, but
-that doesn't fit, then `'right'` will be used instead. If
-`'right'` also doesn't fit, then `'bottom'` will be used. If none
-of these fit, then the best-fitting placement will be used.
+If the `placement` in `computePosition()` is set to `top`, but
+that doesn't fit, then `right` will be used instead. If `right`
+also doesn't fit, then `bottom` will be used. If none of these
+fit, then the best-fitting placement will be used.
 
 ### fallbackStrategy
 
