--- a/website/pages/docs/misc.mdx
+++ b/website/pages/docs/misc.mdx
@@ -49,7 +49,7 @@ positioning issues. You should be wary of these cases though:
 
 ### floating
 
-If the `floating` element has a `scale` transform, ensure you
+If the floating element has a `scale` transform, ensure you
 specify a `transform-origin` depending on its placement.
 
 ### parent
