--- a/website/pages/docs/size.mdx
+++ b/website/pages/docs/size.mdx
@@ -93,7 +93,7 @@ they share the **same value**.
 
 ### bestFit
 
-The `"bestFit"` fallback strategy in the `flip` middleware is the
+The `bestFit` fallback strategy in the `flip` middleware is the
 default, which ensures the best fitting placement is used. In
 this scenario, place `size` **after** `flip`:
 
