Fix(Docs): example error

--- a/website/pages/docs/tutorial.mdx
+++ b/website/pages/docs/tutorial.mdx
@@ -476,12 +476,12 @@ function update() {
 }
 
 function showTooltip() {
-  button.style.display = 'block';
+  tooltip.style.display = 'block';
   update();
 }
 
 function hideTooltip() {
-  button.style.display = '';
+  tooltip.style.display = '';
 }
 
 const showEvents = ['mouseenter', 'focus'];
