docs(tutorial): add pointer-events to tooltip

--- a/website/pages/docs/tutorial.mdx
+++ b/website/pages/docs/tutorial.mdx
@@ -61,6 +61,7 @@ Let's give our tooltip some styling:
         padding: 5px;
         border-radius: 4px;
         font-size: 90%;
+        pointer-events: none;
       }
     </style>
   </head>
