--- a/website/pages/docs/react-dom.mdx
+++ b/website/pages/docs/react-dom.mdx
@@ -136,6 +136,38 @@ other useful styles.
 const {middlewareData} = useFloating();
 ```
 
+## Arrow
+
+A `ref` can be passed as the `element`:
+
+```jsx {5,11,13,21}
+import {useRef} from 'react';
+import {useFloating, arrow} from '@floating-ui/react-dom';
+
+function App() {
+  const arrowRef = useRef();
+  const {
+    x,
+    y,
+    reference,
+    floating,
+    middlewareData: {arrow: {x: arrowX, y: arrowY}} = {},
+  } = useFloating({
+    middleware: [arrow({element: arrowRef})],
+  });
+
+  return (
+    <>
+      <button ref={reference}>My button</button>
+      <div ref={floating}>
+        My tooltip
+        <div ref={arrowRef} />
+      </div>
+    </>
+  );
+}
+```
+
 ## Virtual Element
 
 See [Virtual Elements](/docs/virtual-elements) for details.
