docs: fix brace order

--- a/website/pages/docs/react-dom.mdx
+++ b/website/pages/docs/react-dom.mdx
@@ -151,7 +151,7 @@ function App() {
     y,
     reference,
     floating,
-    middlewareData: {arrow: {x: arrowX, y: arrowY}} = {},
+    middlewareData: {arrow: {x: arrowX, y: arrowY} = {}},
   } = useFloating({
     middleware: [arrow({element: arrowRef})],
   });
