fix highlighting issues

--- a/website/pages/docs/middleware.mdx
+++ b/website/pages/docs/middleware.mdx
@@ -107,7 +107,7 @@ It returns an object and uses a closure to pass the configured
 behavior:
 
 ```js
-middleware: [shiftByAmount(10)];
+const middleware = [shiftByAmount(10)];
 ```
 
 ### Always return an object
